--- a/pop6.css
+++ b/pop6.css
@@ -14,6 +14,27 @@
  // for support, see my blog: https://jimswebtech.blogspot.com/
 
  */
+textarea#exported {
+	display:block;
+	width:100%;
+	height:160px;
+	margin-top:20px;
+	box-sizing:border-box;
+}
+div#sidebarlist {
+	margin-top:60px;
+	padding:0 20px 60px 20px;
+}
+div#playlist {
+	padding-top: 20px;
+}
+div#addvideoform {
+	display: none;
+}
+div#addvideoform > form > div {
+	
+	margin-bottom: 10px;
+}
 a.clickeditem {
 	background-color:#111 !important;
 	color: #fff !important;
@@ -143,7 +164,7 @@ div.right-column time {
 	margin-top: 5px;
 }
 div.right-column form {
-	margin: 20px 0;
+	margin-top: 20px;
 }
 div.right-column input[type='submit']{
 	border: 1px solid #09515d;
@@ -158,11 +179,11 @@ div.right-column input[type='submit']{
 }
 div.right-column input[type='text']{
 	width: 100%;
-	border: 1px solid #09515d;
+	border: 1px solid yellowgreen;
 	padding: 10px;
 	display: inline-block;
-	border-radius: 18px 0 0px 18px;
-	background-color: #09515d;
+	border-radius: 18px 18px 18px 18px;
+	background-color: #333;
 	color: #FFFFFF;
 	box-sizing: border-box;
 	font-size: 14px;
