--- a/pop6.css
+++ b/pop6.css
@@ -70,7 +70,8 @@ div#jpmplayer {
 }
 div#yourlists{
 	margin: 20px 0px;
-	width: 280px;
+	max-width: 300px;
+	width: 100%;
 	display: none;
 	border-top: 1px solid #000;
 	border-left: 1px solid #000;
@@ -116,6 +117,12 @@ header img {
 	width: 100%;
 	border: none;
 	/* box-shadow: 0px 0px 20px #000; */
+}
+section {
+	max-width: 800px;
+	width: 100%;
+	height: auto;
+	margin: 0 auto;
 }
 header {
 	max-width: 800px;
@@ -212,11 +219,11 @@ p {
 h1 {
 	color: yellowgreen;
 	font-size: 2em;
-	margin: 0 0 .5em 0;
+	margin:0;
 }
 h2 {
 	color: #FFF;
-	margin: 0 0 1em 0;
+	margin: 1em 0;
 	font-weight: normal;
 	font-size: 1.5em;
 }
