--- a/src/pop6.css
+++ b/src/pop6.css
@@ -98,7 +98,7 @@ div.yourlists-item a{
 }
 html {
 	/*background: #15161c url('music2.jpg') no-repeat top center fixed;*/
-	background-color: #15161c; 
+	background-color: #222; 
 	background-size: cover;
 }
 input {
