--- a/src/pop6.css
+++ b/src/pop6.css
@@ -14,15 +14,31 @@
  // for support, see my blog: https://jimswebtech.blogspot.com/
 
  */
+div.itemstats {
+	display: block;
+	z-index: 2000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	color: #ccc;
+}
+div#buttonlist {
+	display: flex;
+	justify-content: normal;
+	flex-flow: wrap;
+	column-gap: 20px;
+	row-gap: 20px;
+	max-width: 100%;
+}
 textarea#exported {
-	display:block;
-	width:100%;
-	height:160px;
-	margin-top:20px;
-	box-sizing:border-box;
+	display: block;
+	width: 100%;
+	height: 160px;
+	margin-top: 20px;
+	box-sizing: border-box;
 }
 div#sidebarlist {
-	margin-top:60px;
+	margin-top: 60px;
 	padding:0 20px 60px 20px;
 }
 div#playlist {
@@ -32,11 +48,11 @@ div#addvideoform {
 	display: none;
 }
 div#addvideoform > form > div {
-	
+
 	margin-bottom: 10px;
 }
 a.clickeditem {
-	background-color:#111 !important;
+	background-color: #111 !important;
 	color: #fff !important;
 }
 a.visiteditem {}
@@ -66,7 +82,7 @@ div.videoimg {
 div#jpmplayer {
 	border-top: 1px solid #000;
 	border-left: 1px solid #000;
-	border-right: 1px solid #000;	
+	border-right: 1px solid #000;
 }
 div#yourlists{
 	margin: 20px 0px;
@@ -98,7 +114,7 @@ div.yourlists-item a{
 }
 html {
 	/*background: #15161c url('music2.jpg') no-repeat top center fixed;*/
-	background-color: #222; 
+	background-color: #222;
 	background-size: cover;
 }
 input {
@@ -184,7 +200,7 @@ div.right-column input[type='submit']{
 	color: #FFFFFF;
 	font-size: 14px;
 }
-div.right-column input[type='text']{
+div.right-column input[type='text'], textarea#exported, textarea#exported2 {
 	width: 100%;
 	border: 1px solid yellowgreen;
 	padding: 10px;
@@ -194,6 +210,7 @@ div.right-column input[type='text']{
 	color: #FFFFFF;
 	box-sizing: border-box;
 	font-size: 14px;
+	outline: none;
 }
 section#comments > div > p {
 	margin: 0;
