--- a/src/pop6.css
+++ b/src/pop6.css
@@ -525,7 +525,7 @@ div.right-column {
 	justify-content: normal;
 	min-width: 320px;
 	max-width: 340px;
-	height: auto;
+	height: 100%; /* important, do not change to auto */
 	flex-direction: column;
 	background-color: #222;
 	padding: 0;
