--- a/src/pop6.css
+++ b/src/pop6.css
@@ -14,6 +14,15 @@
  // for support, see my blog: https://jimswebtech.blogspot.com/
 
  */
+div#addformbuttons {
+    margin-bottom: 0px;
+    max-width: 100%;
+    padding: 0;
+    display: flex;
+    flex-wrap: nowrap;
+    height: auto;
+	column-gap: 20px;
+}
 #exported2 {
 	display: block;
 	width: 100%;
