--- a/src/pop6.css
+++ b/src/pop6.css
@@ -14,6 +14,28 @@
  // for support, see my blog: https://jimswebtech.blogspot.com/
 
  */
+ .iframe-contain {
+	overflow:hidden;
+	padding-top:56.25%;
+	position:relative;
+	display:block;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#videoframe {
+	max-width:100%;
+	max-height:100%;
+	position:absolute;
+	left:auto;
+	top:0;
+	height:100%;
+	width:100%;
+}
+.sortbold {
+	font-weight: bold;
+}
 div#addformbuttons {
     margin-bottom: 0px;
     max-width: 100%;
